--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@xyflow/react": "^12.3.0",
     "react": "^18.3.1",
-    "react-archer": "^4.4.0",
     "react-dom": "^18.3.1",
-    "react-draggable": "^4.4.6",
+    "react-flow-renderer": "^10.3.17",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^5.0.0-rc.2"
   },
   "scripts": {
     "start": "react-scripts start",
